--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
     align-items: center;
     flex-direction: column; */
 }
+/* .images{
+    width:60%;
+} */
 
 .images img{
     width: 100%;
@@ -55,6 +58,19 @@
 
 .active{
     background-color: rgba(14, 13, 13, 0.918);
+}
+
+@media(max-width:650px){
+    .images img{
+        width: 100%;
+        height:80vh;
+    }
+}
+@media(max-width:450px){
+    .images img{
+        width: 100%;
+        height:65vh;
+    }
 }
 
 
